--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | QR code component</title>
   
 </head>
@@ -18,7 +18,7 @@
   
   <div id="container">
     <div id="qr-code-div">
-      <img id="qr-code" src="images/image-qr-code.png" alt="qr-code">
+      <img id="qr-code" src="image-qr-code.png" alt="qr-code">
     </div>
       <div id="description">
         <p>Improve your front-end skills by building projects</p>
