--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
   <div id="container">
     <div id="qr-code-div">
-      <img id="qr-code" src="image-qr-code.png" alt="qr-code">
+      <img id="qr-code" src="qr-code.png" alt="qr-code">
     </div>
       <div id="description">
         <p>Improve your front-end skills by building projects</p>
